# cbf_rl_train

./: .gitignore  CMakeLists.txt  package.xml
launch/: dqn_continue.launch  manual_test.launch  model_test.launch  train_env_ddnmpc.launch  train_env_dqn.launch  train_env_sac.launch  train_env_td3.launch  train_env_td3_continue.launch
process/: process_rosbag.py
src/: dummy_trainer.py  gui_info.py  model_test.py  nmpc_cbf_test_node.py  nmpc_cbf_train_node.py  process_rosbag.py  register_env.py  reset_episode.py  sweep_info.txt  train_continue_dqn.py  train_continue_td3.py  train_dqn.py  train_info_dqn_3700.txt  train_info_td3.txt  train_sac.py  train_td3.py
src/envs/: cbf_gzros.py  cbf_gzros_dqn.py  cbf_gzros_td3.py
world/: cbfrl.world
